Fix sizing and spacing of form elements and overall product info area

--- a/theme/styles/snippets/product-info.scss
+++ b/theme/styles/snippets/product-info.scss
@@ -10,7 +10,12 @@
     }
   }
 
-  &__text-fields div {
-    letter-spacing: 0.0275rem;
+  &__text-fields {
+
+    padding-bottom: 0.65rem;
+
+    div {
+      letter-spacing: 0.0275rem;
+    }
   }
 }
